// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`yaml parser > dereferencing anchor refs > insane edge case #2 1`] = `
{
  "a": {
    "b": {
      "c": [
        {
          "a": {
            "b": {
              "c": [
                null,
              ],
            },
            "d": {
              "c": [
                null,
              ],
            },
          },
        },
      ],
    },
    "d": {
      "c": [
        null,
      ],
    },
  },
}
`;

exports[`yaml parser > dereferencing anchor refs > insane edge case 1`] = `
[
  [
    [
      null,
      {
        "test": [
          null,
        ],
      },
      {
        "abc": {
          "a": null,
          "c": null,
          "foo": 2,
          "x": null,
        },
      },
    ],
    {
      "test": [
        [
          null,
          {
            "test": [
              null,
            ],
          },
          {
            "abc": {
              "a": null,
              "c": null,
              "foo": 2,
              "x": null,
            },
          },
        ],
      ],
    },
    {
      "abc": {
        "a": null,
        "c": [
          null,
          {
            "test": [
              null,
            ],
          },
          {
            "abc": {
              "a": null,
              "c": null,
              "foo": 2,
              "x": null,
            },
          },
        ],
        "foo": 2,
        "x": {
          "a": null,
          "c": null,
          "foo": 2,
          "x": null,
        },
      },
    },
  ],
]
`;

exports[`yaml parser > parse diverse 1`] = `
{
  "ast": {
    "comments": [
      {
        "endPosition": 46,
        "startPosition": 4,
        "value": " <- yaml supports comments, json does not",
      },
      {
        "endPosition": 89,
        "startPosition": 47,
        "value": " did you know you can embed json in yaml?",
      },
      {
        "endPosition": 122,
        "startPosition": 90,
        "value": " try uncommenting the next line",
      },
      {
        "endPosition": 139,
        "startPosition": 123,
        "value": " { foo: 'bar' }",
      },
    ],
    "endPosition": 442,
    "errors": [],
    "kind": 2,
    "mappings": [
      {
        "endPosition": 189,
        "errors": [],
        "key": {
          "doubleQuoted": false,
          "endPosition": 145,
          "errors": [],
          "kind": 0,
          "parent": [Circular],
          "plainScalar": true,
          "rawValue": "json",
          "startPosition": 141,
          "value": "json",
        },
        "kind": 1,
        "parent": [Circular],
        "startPosition": 141,
        "value": {
          "endPosition": 189,
          "errors": [],
          "items": [
            {
              "doubleQuoted": false,
              "endPosition": 156,
              "errors": [],
              "kind": 0,
              "parent": [Circular],
              "plainScalar": true,
              "rawValue": "rigid",
              "startPosition": 151,
              "value": "rigid",
            },
            {
              "doubleQuoted": false,
              "endPosition": 188,
              "errors": [],
              "kind": 0,
              "parent": [Circular],
              "plainScalar": true,
              "rawValue": "better for data interchange",
              "startPosition": 161,
              "value": "better for data interchange",
            },
          ],
          "kind": 3,
          "parent": [Circular],
          "startPosition": 149,
        },
      },
      {
        "endPosition": 234,
        "errors": [],
        "key": {
          "doubleQuoted": false,
          "endPosition": 193,
          "errors": [],
          "kind": 0,
          "parent": [Circular],
          "plainScalar": true,
          "rawValue": "yaml",
          "startPosition": 189,
          "value": "yaml",
        },
        "kind": 1,
        "parent": [Circular],
        "startPosition": 189,
        "value": {
          "endPosition": 234,
          "errors": [],
          "items": [
            {
              "doubleQuoted": false,
              "endPosition": 216,
              "errors": [],
              "kind": 0,
              "parent": [Circular],
              "plainScalar": true,
              "rawValue": "slim and flexible",
              "startPosition": 199,
              "value": "slim and flexible",
            },
            {
              "doubleQuoted": false,
              "endPosition": 224,
              "errors": [],
              "kind": 0,
              "parent": [Circular],
              "plainScalar": true,
              "rawValue": "123",
              "startPosition": 221,
              "value": "123",
              "valueObject": 123,
            },
            {
              "doubleQuoted": false,
              "endPosition": 233,
              "errors": [],
              "kind": 0,
              "parent": [Circular],
              "plainScalar": true,
              "rawValue": "true",
              "startPosition": 229,
              "value": "true",
              "valueObject": true,
            },
          ],
          "kind": 3,
          "parent": [Circular],
          "startPosition": 197,
        },
      },
      {
        "endPosition": 319,
        "errors": [],
        "key": {
          "doubleQuoted": false,
          "endPosition": 240,
          "errors": [],
          "kind": 0,
          "parent": [Circular],
          "plainScalar": true,
          "rawValue": "object",
          "startPosition": 234,
          "value": "object",
        },
        "kind": 1,
        "parent": [Circular],
        "startPosition": 234,
        "value": {
          "endPosition": 319,
          "errors": [],
          "kind": 2,
          "mappings": [
            {
              "endPosition": 254,
              "errors": [],
              "key": {
                "doubleQuoted": false,
                "endPosition": 247,
                "errors": [],
                "kind": 0,
                "parent": [Circular],
                "plainScalar": true,
                "rawValue": "key",
                "startPosition": 244,
                "value": "key",
              },
              "kind": 1,
              "parent": [Circular],
              "startPosition": 244,
              "value": {
                "doubleQuoted": false,
                "endPosition": 254,
                "errors": [],
                "kind": 0,
                "parent": [Circular],
                "plainScalar": true,
                "rawValue": "value",
                "startPosition": 249,
                "value": "value",
              },
            },
            {
              "endPosition": 319,
              "errors": [],
              "key": {
                "doubleQuoted": false,
                "endPosition": 262,
                "errors": [],
                "kind": 0,
                "parent": [Circular],
                "plainScalar": true,
                "rawValue": "array",
                "startPosition": 257,
                "value": "array",
              },
              "kind": 1,
              "parent": [Circular],
              "startPosition": 257,
              "value": {
                "endPosition": 319,
                "errors": [],
                "items": [
                  {
                    "endPosition": 281,
                    "errors": [],
                    "kind": 2,
                    "mappings": [
                      {
                        "endPosition": 281,
                        "errors": [],
                        "key": {
                          "doubleQuoted": false,
                          "endPosition": 280,
                          "errors": [],
                          "kind": 0,
                          "parent": [Circular],
                          "plainScalar": true,
                          "rawValue": "null_value",
                          "startPosition": 270,
                          "value": "null_value",
                        },
                        "kind": 1,
                        "parent": [Circular],
                        "startPosition": 270,
                        "value": null,
                      },
                    ],
                    "parent": [Circular],
                    "startPosition": 270,
                  },
                  {
                    "endPosition": 301,
                    "errors": [],
                    "kind": 2,
                    "mappings": [
                      {
                        "endPosition": 301,
                        "errors": [],
                        "key": {
                          "doubleQuoted": false,
                          "endPosition": 295,
                          "errors": [],
                          "kind": 0,
                          "parent": [Circular],
                          "plainScalar": true,
                          "rawValue": "boolean",
                          "startPosition": 288,
                          "value": "boolean",
                        },
                        "kind": 1,
                        "parent": [Circular],
                        "startPosition": 288,
                        "value": {
                          "doubleQuoted": false,
                          "endPosition": 301,
                          "errors": [],
                          "kind": 0,
                          "parent": [Circular],
                          "plainScalar": true,
                          "rawValue": "true",
                          "startPosition": 297,
                          "value": "true",
                          "valueObject": true,
                        },
                      },
                    ],
                    "parent": [Circular],
                    "startPosition": 288,
                  },
                  {
                    "endPosition": 318,
                    "errors": [],
                    "kind": 2,
                    "mappings": [
                      {
                        "endPosition": 318,
                        "errors": [],
                        "key": {
                          "doubleQuoted": false,
                          "endPosition": 315,
                          "errors": [],
                          "kind": 0,
                          "parent": [Circular],
                          "plainScalar": true,
                          "rawValue": "integer",
                          "startPosition": 308,
                          "value": "integer",
                        },
                        "kind": 1,
                        "parent": [Circular],
                        "startPosition": 308,
                        "value": {
                          "doubleQuoted": false,
                          "endPosition": 318,
                          "errors": [],
                          "kind": 0,
                          "parent": [Circular],
                          "plainScalar": true,
                          "rawValue": "1",
                          "startPosition": 317,
                          "value": "1",
                          "valueObject": 1,
                        },
                      },
                    ],
                    "parent": [Circular],
                    "startPosition": 308,
                  },
                ],
                "kind": 3,
                "parent": [Circular],
                "startPosition": 268,
              },
            },
          ],
          "parent": [Circular],
          "startPosition": 244,
        },
      },
      {
        "endPosition": 372,
        "errors": [],
        "key": {
          "doubleQuoted": false,
          "endPosition": 328,
          "errors": [],
          "kind": 0,
          "parent": [Circular],
          "plainScalar": true,
          "rawValue": "paragraph",
          "startPosition": 319,
          "value": "paragraph",
        },
        "kind": 1,
        "parent": [Circular],
        "startPosition": 319,
        "value": {
          "doubleQuoted": false,
          "endPosition": 372,
          "errors": [],
          "kind": 0,
          "parent": [Circular],
          "rawValue": ">
  Blank lines denote

  paragraph breaks",
          "startPosition": 330,
          "value": "Blank lines denote
paragraph breaks
",
        },
      },
      {
        "endPosition": 441,
        "errors": [],
        "key": {
          "doubleQuoted": false,
          "endPosition": 380,
          "errors": [],
          "kind": 0,
          "parent": [Circular],
          "plainScalar": true,
          "rawValue": "content",
          "startPosition": 373,
          "value": "content",
        },
        "kind": 1,
        "parent": [Circular],
        "startPosition": 373,
        "value": {
          "doubleQuoted": false,
          "endPosition": 441,
          "errors": [],
          "kind": 0,
          "parent": [Circular],
          "rawValue": "|-
  Or we
  can auto
  convert line breaks
  to save space",
          "startPosition": 382,
          "value": "Or we
can auto
convert line breaks
to save space",
        },
      },
    ],
    "parent": null,
    "startPosition": 141,
  },
  "comments": {},
  "data": {
    "content": "Or we
can auto
convert line breaks
to save space",
    "json": [
      "rigid",
      "better for data interchange",
    ],
    "object": {
      "array": [
        {
          "null_value": null,
        },
        {
          "boolean": true,
        },
        {
          "integer": 1,
        },
      ],
      "key": "value",
    },
    "paragraph": "Blank lines denote
paragraph breaks
",
    "yaml": [
      "slim and flexible",
      123,
      true,
    ],
  },
  "diagnostics": [],
  "lineMap": [
    4,
    47,
    90,
    123,
    140,
    141,
    147,
    157,
    189,
    195,
    217,
    225,
    234,
    242,
    255,
    264,
    282,
    302,
    319,
    332,
    353,
    354,
    373,
    385,
    393,
    404,
    426,
    442,
    443,
  ],
  "metadata": undefined,
}
`;

exports[`yaml parser dereferencing anchor refs insane edge case #2 1`] = `
Object {
  "a": Object {
    "b": Object {
      "c": Array [
        Object {
          "a": Object {
            "b": Object {
              "c": Array [
                null,
              ],
            },
            "d": Object {
              "c": Array [
                null,
              ],
            },
          },
        },
      ],
    },
    "d": Object {
      "c": Array [
        null,
      ],
    },
  },
}
`;

exports[`yaml parser dereferencing anchor refs insane edge case 1`] = `
Array [
  Array [
    Array [
      null,
      Object {
        "test": Array [
          null,
        ],
      },
      Object {
        "abc": Object {
          "a": null,
          "c": null,
          "foo": 2,
          "x": null,
        },
      },
    ],
    Object {
      "test": Array [
        Array [
          null,
          Object {
            "test": Array [
              null,
            ],
          },
          Object {
            "abc": Object {
              "a": null,
              "c": null,
              "foo": 2,
              "x": null,
            },
          },
        ],
      ],
    },
    Object {
      "abc": Object {
        "a": null,
        "c": Array [
          null,
          Object {
            "test": Array [
              null,
            ],
          },
          Object {
            "abc": Object {
              "a": null,
              "c": null,
              "foo": 2,
              "x": null,
            },
          },
        ],
        "foo": 2,
        "x": Object {
          "a": null,
          "c": null,
          "foo": 2,
          "x": null,
        },
      },
    },
  ],
]
`;

exports[`yaml parser parse diverse 1`] = `
Object {
  "ast": Object {
    "comments": Array [
      Object {
        "endPosition": 46,
        "startPosition": 4,
        "value": " <- yaml supports comments, json does not",
      },
      Object {
        "endPosition": 89,
        "startPosition": 47,
        "value": " did you know you can embed json in yaml?",
      },
      Object {
        "endPosition": 122,
        "startPosition": 90,
        "value": " try uncommenting the next line",
      },
      Object {
        "endPosition": 139,
        "startPosition": 123,
        "value": " { foo: 'bar' }",
      },
    ],
    "endPosition": 442,
    "errors": Array [],
    "kind": 2,
    "mappings": Array [
      Object {
        "endPosition": 189,
        "errors": Array [],
        "key": Object {
          "doubleQuoted": false,
          "endPosition": 145,
          "errors": Array [],
          "kind": 0,
          "parent": [Circular],
          "plainScalar": true,
          "rawValue": "json",
          "startPosition": 141,
          "value": "json",
        },
        "kind": 1,
        "parent": [Circular],
        "startPosition": 141,
        "value": Object {
          "endPosition": 189,
          "errors": Array [],
          "items": Array [
            Object {
              "doubleQuoted": false,
              "endPosition": 156,
              "errors": Array [],
              "kind": 0,
              "parent": [Circular],
              "plainScalar": true,
              "rawValue": "rigid",
              "startPosition": 151,
              "value": "rigid",
            },
            Object {
              "doubleQuoted": false,
              "endPosition": 188,
              "errors": Array [],
              "kind": 0,
              "parent": [Circular],
              "plainScalar": true,
              "rawValue": "better for data interchange",
              "startPosition": 161,
              "value": "better for data interchange",
            },
          ],
          "kind": 3,
          "parent": [Circular],
          "startPosition": 149,
        },
      },
      Object {
        "endPosition": 234,
        "errors": Array [],
        "key": Object {
          "doubleQuoted": false,
          "endPosition": 193,
          "errors": Array [],
          "kind": 0,
          "parent": [Circular],
          "plainScalar": true,
          "rawValue": "yaml",
          "startPosition": 189,
          "value": "yaml",
        },
        "kind": 1,
        "parent": [Circular],
        "startPosition": 189,
        "value": Object {
          "endPosition": 234,
          "errors": Array [],
          "items": Array [
            Object {
              "doubleQuoted": false,
              "endPosition": 216,
              "errors": Array [],
              "kind": 0,
              "parent": [Circular],
              "plainScalar": true,
              "rawValue": "slim and flexible",
              "startPosition": 199,
              "value": "slim and flexible",
            },
            Object {
              "doubleQuoted": false,
              "endPosition": 224,
              "errors": Array [],
              "kind": 0,
              "parent": [Circular],
              "plainScalar": true,
              "rawValue": "123",
              "startPosition": 221,
              "value": "123",
              "valueObject": 123,
            },
            Object {
              "doubleQuoted": false,
              "endPosition": 233,
              "errors": Array [],
              "kind": 0,
              "parent": [Circular],
              "plainScalar": true,
              "rawValue": "true",
              "startPosition": 229,
              "value": "true",
              "valueObject": true,
            },
          ],
          "kind": 3,
          "parent": [Circular],
          "startPosition": 197,
        },
      },
      Object {
        "endPosition": 319,
        "errors": Array [],
        "key": Object {
          "doubleQuoted": false,
          "endPosition": 240,
          "errors": Array [],
          "kind": 0,
          "parent": [Circular],
          "plainScalar": true,
          "rawValue": "object",
          "startPosition": 234,
          "value": "object",
        },
        "kind": 1,
        "parent": [Circular],
        "startPosition": 234,
        "value": Object {
          "endPosition": 319,
          "errors": Array [],
          "kind": 2,
          "mappings": Array [
            Object {
              "endPosition": 254,
              "errors": Array [],
              "key": Object {
                "doubleQuoted": false,
                "endPosition": 247,
                "errors": Array [],
                "kind": 0,
                "parent": [Circular],
                "plainScalar": true,
                "rawValue": "key",
                "startPosition": 244,
                "value": "key",
              },
              "kind": 1,
              "parent": [Circular],
              "startPosition": 244,
              "value": Object {
                "doubleQuoted": false,
                "endPosition": 254,
                "errors": Array [],
                "kind": 0,
                "parent": [Circular],
                "plainScalar": true,
                "rawValue": "value",
                "startPosition": 249,
                "value": "value",
              },
            },
            Object {
              "endPosition": 319,
              "errors": Array [],
              "key": Object {
                "doubleQuoted": false,
                "endPosition": 262,
                "errors": Array [],
                "kind": 0,
                "parent": [Circular],
                "plainScalar": true,
                "rawValue": "array",
                "startPosition": 257,
                "value": "array",
              },
              "kind": 1,
              "parent": [Circular],
              "startPosition": 257,
              "value": Object {
                "endPosition": 319,
                "errors": Array [],
                "items": Array [
                  Object {
                    "endPosition": 281,
                    "errors": Array [],
                    "kind": 2,
                    "mappings": Array [
                      Object {
                        "endPosition": 281,
                        "errors": Array [],
                        "key": Object {
                          "doubleQuoted": false,
                          "endPosition": 280,
                          "errors": Array [],
                          "kind": 0,
                          "parent": [Circular],
                          "plainScalar": true,
                          "rawValue": "null_value",
                          "startPosition": 270,
                          "value": "null_value",
                        },
                        "kind": 1,
                        "parent": [Circular],
                        "startPosition": 270,
                        "value": null,
                      },
                    ],
                    "parent": [Circular],
                    "startPosition": 270,
                  },
                  Object {
                    "endPosition": 301,
                    "errors": Array [],
                    "kind": 2,
                    "mappings": Array [
                      Object {
                        "endPosition": 301,
                        "errors": Array [],
                        "key": Object {
                          "doubleQuoted": false,
                          "endPosition": 295,
                          "errors": Array [],
                          "kind": 0,
                          "parent": [Circular],
                          "plainScalar": true,
                          "rawValue": "boolean",
                          "startPosition": 288,
                          "value": "boolean",
                        },
                        "kind": 1,
                        "parent": [Circular],
                        "startPosition": 288,
                        "value": Object {
                          "doubleQuoted": false,
                          "endPosition": 301,
                          "errors": Array [],
                          "kind": 0,
                          "parent": [Circular],
                          "plainScalar": true,
                          "rawValue": "true",
                          "startPosition": 297,
                          "value": "true",
                          "valueObject": true,
                        },
                      },
                    ],
                    "parent": [Circular],
                    "startPosition": 288,
                  },
                  Object {
                    "endPosition": 318,
                    "errors": Array [],
                    "kind": 2,
                    "mappings": Array [
                      Object {
                        "endPosition": 318,
                        "errors": Array [],
                        "key": Object {
                          "doubleQuoted": false,
                          "endPosition": 315,
                          "errors": Array [],
                          "kind": 0,
                          "parent": [Circular],
                          "plainScalar": true,
                          "rawValue": "integer",
                          "startPosition": 308,
                          "value": "integer",
                        },
                        "kind": 1,
                        "parent": [Circular],
                        "startPosition": 308,
                        "value": Object {
                          "doubleQuoted": false,
                          "endPosition": 318,
                          "errors": Array [],
                          "kind": 0,
                          "parent": [Circular],
                          "plainScalar": true,
                          "rawValue": "1",
                          "startPosition": 317,
                          "value": "1",
                          "valueObject": 1,
                        },
                      },
                    ],
                    "parent": [Circular],
                    "startPosition": 308,
                  },
                ],
                "kind": 3,
                "parent": [Circular],
                "startPosition": 268,
              },
            },
          ],
          "parent": [Circular],
          "startPosition": 244,
        },
      },
      Object {
        "endPosition": 372,
        "errors": Array [],
        "key": Object {
          "doubleQuoted": false,
          "endPosition": 328,
          "errors": Array [],
          "kind": 0,
          "parent": [Circular],
          "plainScalar": true,
          "rawValue": "paragraph",
          "startPosition": 319,
          "value": "paragraph",
        },
        "kind": 1,
        "parent": [Circular],
        "startPosition": 319,
        "value": Object {
          "doubleQuoted": false,
          "endPosition": 372,
          "errors": Array [],
          "kind": 0,
          "parent": [Circular],
          "rawValue": ">
  Blank lines denote

  paragraph breaks",
          "startPosition": 330,
          "value": "Blank lines denote
paragraph breaks
",
        },
      },
      Object {
        "endPosition": 441,
        "errors": Array [],
        "key": Object {
          "doubleQuoted": false,
          "endPosition": 380,
          "errors": Array [],
          "kind": 0,
          "parent": [Circular],
          "plainScalar": true,
          "rawValue": "content",
          "startPosition": 373,
          "value": "content",
        },
        "kind": 1,
        "parent": [Circular],
        "startPosition": 373,
        "value": Object {
          "doubleQuoted": false,
          "endPosition": 441,
          "errors": Array [],
          "kind": 0,
          "parent": [Circular],
          "rawValue": "|-
  Or we
  can auto
  convert line breaks
  to save space",
          "startPosition": 382,
          "value": "Or we
can auto
convert line breaks
to save space",
        },
      },
    ],
    "parent": null,
    "startPosition": 141,
  },
  "comments": Object {},
  "data": Object {
    "content": "Or we
can auto
convert line breaks
to save space",
    "json": Array [
      "rigid",
      "better for data interchange",
    ],
    "object": Object {
      "array": Array [
        Object {
          "null_value": null,
        },
        Object {
          "boolean": true,
        },
        Object {
          "integer": 1,
        },
      ],
      "key": "value",
    },
    "paragraph": "Blank lines denote
paragraph breaks
",
    "yaml": Array [
      "slim and flexible",
      123,
      true,
    ],
  },
  "diagnostics": Array [],
  "lineMap": Array [
    4,
    47,
    90,
    123,
    140,
    141,
    147,
    157,
    189,
    195,
    217,
    225,
    234,
    242,
    255,
    264,
    282,
    302,
    319,
    332,
    353,
    354,
    373,
    385,
    393,
    404,
    426,
    442,
    443,
  ],
  "metadata": undefined,
}
`;
